--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
-    "token": "YOUR_DISCORD_BOT_TOKEN_HERE",
-    "ip": "YOUR_SERVER_IP_ADRESS_HERE",
-    "platform": "java OR bedrock"
+    "token": "...",
+    "ip": "...",
+    "platform": "...",
+    "mode": "..."
 }
